--- a/socialmedia/src/component/UI/Button/button.module.css
+++ b/socialmedia/src/component/UI/Button/button.module.css
@@ -12,7 +12,7 @@ input[type=submit] {
     box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
+    margin: auto;
 }
 
 input[type=submit]:hover {
